force-app/main/default/objects/Category__c/fields/Fixed_Bill__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Bill</label>
    <type>Checkbox</type>
</CustomField>