force-app/main/default/objects/Category__c/fields/Spend_Total__c.field-meta.xml
<CustomField>
    <fullName>Spend_Total__c</fullName>
    <label>Spend Total</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>