force-app/main/default/objects/Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Report__c</columns>
    <columns>Budget__c</columns>
    <columns>Spend_Total__c</columns>
    <columns>Display_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>